# cs2shock

./: Cargo.toml  README.md  TECHDETAILS.md  build.rs  cs2shock-config.json  gamestate_integration_cs2shock.cfg
.github/workflows/: build-and-release.yml
src/: api.rs  config.rs  gamestateintegration.rs  gui.rs  main.rs  pishock.rs  pishock_session_controller.rs  setup.rs  sounds.rs
